ARM/APIM/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "apimInstanceName": {
      "type": "string"
    },
    "apimDnsName": {
      "type": "string"
    },
    "apimPublisherEmail": {
      "type": "string"
    },
    "vnetName": {
      "defaultValue": "sf-apim-vnet",
      "type": "string"
    },
    "apimSubnetName": {
      "defaultValue": "apim-subnet",
      "type": "string"
    },
    "vnetVersion": {
      "defaultValue": "2017-03-01",
      "type": "string"
    },
    "apimSgName": {
      "defaultValue": "apim-vnet-security",
      "type": "string"
    },
    "apimSgVersion": {
      "defaultValue": "2017-03-01",
      "type": "string"
    }
  },
  "variables": {
    "location": "[string(resourceGroup().location)]",
    "apimIP": "[concat(parameters('apimInstanceName'), '-public-ip')]",
    "apimSubnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('apimSubnetName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.ApiManagement/service",
      "sku": {
        "name": "Developer",
        "capacity": 1
      },
      "name": "[parameters('apimInstanceName')]",
      "apiVersion": "2016-07-07",
      "location": "[variables('location')]",
      "tags": {
      },
      "properties": {
        "publisherEmail": "[parameters('apimPublisherEmail')]",
        "publisherName": "Microsoft",
        "provisioningState": "Succeeded",
        "targetProvisioningState": "",
        "createdAtUtc": "2017-03-30T21:26:15.2829367Z",
        "runtimeUrl": "[concat('https://', parameters('apimInstanceName'),'.azure-api.net')]",
        "portalUrl": "[concat('https://', parameters('apimInstanceName'),'.portal.azure-api.net')]",
        "managementApiUrl": "[concat('https://', parameters('apimInstanceName'),'.management.azure-api.net')]",
        "scmUrl": "[concat('https://', parameters('apimInstanceName'),'.scm.azure-api.net')]",
        "addresserEmail": null,
        "hostnameConfigurations": [],
        "staticIPs": [
          "[reference(variables('apimIP'))]"
        ],
        "additionalLocations": null,
        "vpnconfiguration": {
          "subnetResourceId": "[variables('apimSubnetId')]",
          "location": "[variables('location')]"
        },
        "customProperties": {
          "subnetAddress": "[reference(variables('apimSubnetId'), parameters('vnetVersion')).addressPrefix]"
        },
        "vpnType": 1
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('apimSgName')]",
      "apiVersion": "[parameters('apimSgVersion')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Client_communication_to_API_Management",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[reference(variables('apimSubnetId'), parameters('vnetVersion')).addressPrefix]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Secure_Client_communication_to_API_Management",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[reference(variables('apimSubnetId'), parameters('vnetVersion')).addressPrefix]",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Management_endpoint_for_Azure_portal_and_Powershell",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache",
            "properties": {
              "protocol": "UDP",
              "sourcePortRange": "6381-6383",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Azure_Storage_and_Azure_Service_Bus",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_SQL",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_SQL_V12",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_SQL_V12_2",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "14000-14999",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Service_Bus",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "9350-9354",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_for_Log_to_event_Hub_policy",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5671",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 150,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache_outbound",
            "properties": {
              "protocol": "UDP",
              "sourcePortRange": "6381-6383",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 160,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_File_Share_for_GIT",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 170,
              "direction": "Outbound"
            }
          },
          {
            "name": "Azure_Infrastructure_Load_Balancer",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('apimIP')]",
      "apiVersion": "2016-03-30",
      "location": "[variables('location')]",
      "tags": {
        "resourceType": "API Management",
        "clusterName": "[parameters('apimInstanceName')]"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "dnsSettings": {
          "domainNameLabel": "[parameters('apimDnsName')]"
        }
      }
    }
  ]
}
